--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,10 @@
     width: 100vw;
 }
 
-.leaflet-container {height: 70vh;}
+.leaflet-container {
+    height: 70vh;
+}
+
+img {
+    height: 50px;
+}
